--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,15 @@
 
 </head>
 <body>
-<h1>aqui vamos a hacer un blog post</h1>
-<p>este es el parrafo</p>
+<h1>Este es el titulo 
+    atractivo e interesante del 
+    post</h1>
+<p>Y este es el parrafo
+    de inicio donde vamos 
+    a explicar las cosas 
+    interesantes que se pueden 
+    hacer con ramas.
+</p>
 </body>
 
 
