tructura inicia cabezera Please enter the commit message for your changes. Lines starting

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,12 @@
 
 </head>
 <body>
+    <div id="container">
+        <div id="cabezera">
+            cabezera
+
+    </div>
+    <div id= "post">
 <h1>Este es el titulo 
     atractivo e interesante del 
     post</h1>
@@ -13,8 +19,11 @@
     a explicar las cosas 
     interesantes que se pueden 
     hacer con ramas.
+</div>
+</div>
 </p>
 </body>
+</html>
 
 
 
