agregado ua mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,10 @@
     interesantes que se pueden 
     hacer con ramas.
 </p>
+<p>
+    soy mas de lo que la gente ve, mi voluntad
+    es inquebrantable.
+</p>
 </body>
 
 
